--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------------
   Changelog for "Rainbeau's Rational Romance"
 ---------------------------------------------------------------------------------
+- 4/16/2020
+	- Fixed thought for pawns sleeping next to lover's other partners in polycules
+
 - 4/14/2020
 	-Fixed Index error for pawns with dull bedrooms.
 
