--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------
   Changelog for "Rainbeau's Rational Romance"
 ---------------------------------------------------------------------------------
+- 5/11/2020
+	- Fixed traits getting replaced by sexuality traits.
+	- Added a max range slider for hookup attempt distances
+
 - 5/6/2020
 	- Changed disfigured mood penalty from +3 to -3
 	- Added slider for "SecondaryLovinChance" to increase frequency of lovin attempts
